--- a/callback.html
+++ b/callback.html
@@ -13,7 +13,11 @@
 	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 	  crossorigin="anonymous"></script>
 	<script>
-		var pinterest = {grant_type:'authorization_code',client_id:'4924393521510627802',client_secret:'953d71f8410650fb398fc0e22eb771318dcf6b0d33a80e3609f8dc73e5665758',code='b49a7a88d9bd5e8a'};
+		var pinterest = {
+				grant_type:'authorization_code',
+				client_id:'4924393521510627802',
+				client_secret:'953d71f8410650fb398fc0e22eb771318dcf6b0d33a80e3609f8dc73e5665758',
+				'code'='b49a7a88d9bd5e8a'};
 		$('form').submit(function(e){
 			event.preventDefault();
 			$.ajax({
