modifying callback.html

--- a/callback.html
+++ b/callback.html
@@ -17,7 +17,7 @@
 				grant_type:'authorization_code',
 				client_id:'4924393521510627802',
 				client_secret:'953d71f8410650fb398fc0e22eb771318dcf6b0d33a80e3609f8dc73e5665758',
-				'code'='b49a7a88d9bd5e8a'};
+				code:'b49a7a88d9bd5e8a'};
 		$('form').submit(function(e){
 			event.preventDefault();
 			$.ajax({
