--- a/callback.html
+++ b/callback.html
@@ -6,6 +6,9 @@
 <body>
 	<form>
 		<input type="text" name="">
+		<textarea>
+			
+		</textarea>
 		<input type="submit" name="">
 	</form>
 	<script
@@ -13,6 +16,9 @@
 	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 	  crossorigin="anonymous"></script>
 	<script>
+		var fiveHundredPx = {
+			oauth_callback: 'https://kaseyllabelle.github.io/IoP/callback.html'
+		}
 		var pinterest = {
 				grant_type:'authorization_code',
 				client_id:'4924393521510627802',
@@ -21,7 +27,9 @@
 		$('form').submit(function(e){
 			event.preventDefault();
 			$.ajax({
-				method:'POST', url:$('input[type="text"]').val()
+				method:'POST', 
+				url:$('input[type="text"]').val(), 
+				data: JSON.stringify($('textarea').val())
 			},function(data){console.log(data);});
 		});
 	</script>
