--- a/callback.html
+++ b/callback.html
@@ -43,7 +43,7 @@
 			$.ajax({
 				method:'POST',
 				url:$('input[type="text"]').val(),
-				data: obj
+				data: pinterest
 			},function(data){console.log(data);});
 		});
 	</script>
