--- a/callback.html
+++ b/callback.html
@@ -5,16 +5,19 @@
 </head>
 <body>
 	<form>
-		<input type="text" name="">
-		<textarea>
-
-		</textarea>
+		<input type="text" name=""><br/>
+		<textarea></textarea><br/>
+		<input id="radio-post" type="radio" name="req" value="POST" checked /><label for="radio-post">POST</label>
+		<input id="radio-get" type="radio" name="req" value="GET" /><label for="radio-get">GET</label>
 		<input type="submit" name="">
 	</form>
+			Pinterest 1:<br/>
+			<code>
 			grant_type:'authorization_code',
 			client_id:'4924393521510627802',
 			client_secret:'953d71f8410650fb398fc0e22eb771318dcf6b0d33a80e3609f8dc73e5665758',
 			code:'b49a7a88d9bd5e8a'
+			</code>
 	<script
 	  src="https://code.jquery.com/jquery-3.2.1.min.js"
 	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -36,12 +39,13 @@
 					tmp = $('textarea').val().trim().split(',');
 					tmp.map((itm) => {
 						let tmp2 = itm.split(':');
+						// if(tmp2[1] && !tmp2[1].length){continue}
 						obj[tmp2[0].trim()] = tmp2[1].replace(/\'/g,'').trim();
 					})
 					// obj = JSON.stringify(obj)
-					// console.log('obj:',obj,tmp);
+					console.log('obj:',obj,tmp,$('input[type="radio"]:checked').val());
 			$.ajax({
-				method:'POST',
+				method:$('radio:selected').val(),
 				url:$('input[type="text"]').val(),
 				data: pinterest
 			},function(data){console.log(data);});
