No longer Hard Coded

--- a/callback.html
+++ b/callback.html
@@ -47,7 +47,7 @@
 			$.ajax({
 				method:$('radio:selected').val(),
 				url:$('input[type="text"]').val(),
-				data: pinterest
+				data: obj
 			},function(data){console.log(data);});
 		});
 	</script>
