--- a/callback.html
+++ b/callback.html
@@ -14,18 +14,6 @@
 			Pinterest Login:<br/>
 			<br /><br /><br />
 			<a href="https://api.pinterest.com/oauth/?response_type=code&redirect_uri=https://kaseyllabelle.github.io/IoP/callback.html&client_id=4924393521510627802&scope=read_public&state=pinpuppies">pinterest oauth</a>
-			<script>
-				$(document).ready(()=>
-				{
-					if(getURLParameter('state') === 'pinpuppies')
-					{
-						$('input[type="text"]').val('https://api.pinterest.com/v1/oauth/token')
-						$('textarea').val(`grant_type:'authorization_code',client_id:'4924393521510627802',client_secret:'953d71f8410650fb398fc0e22eb771318dcf6b0d33a80e3609f8dc73e5665758',code:'${getURLParameter('code')}'`)
-						$('input[type="submit"]').click();
-						//alert('pinterest key is in the console')
-					}
-				});
-			</script>
 					<br /><br /><br />
 
 			<code>
@@ -72,6 +60,19 @@
 				url:$('input[type="text"]').val(),
 				data: obj
 			},function(data){console.log(data);});
+		});
+	</script>
+	<script>
+		$(document).ready(()=>
+		{
+			//handle pinterest from start to finish
+			if(getURLParameter('state') === 'pinpuppies')
+			{
+				$('input[type="text"]').val('https://api.pinterest.com/v1/oauth/token')
+				$('textarea').val(`grant_type:'authorization_code',client_id:'4924393521510627802',client_secret:'953d71f8410650fb398fc0e22eb771318dcf6b0d33a80e3609f8dc73e5665758',code:'${getURLParameter('code')}'`)
+				$('input[type="submit"]').click();
+				//alert('pinterest key is in the console')
+			}
 		});
 	</script>
 </body>
