--- a/callback.html
+++ b/callback.html
@@ -71,7 +71,7 @@
 				$('input[type="text"]').val('https://api.pinterest.com/v1/oauth/token')
 				$('textarea').val(`grant_type:'authorization_code',client_id:'4924393521510627802',client_secret:'953d71f8410650fb398fc0e22eb771318dcf6b0d33a80e3609f8dc73e5665758',code:'${getURLParameter('code')}'`)
 				$('input[type="submit"]').click();
-				//alert('pinterest key is in the console')
+				alert('pinterest key is in the console (network tab)')
 			}
 		});
 	</script>
