--- a/callback.html
+++ b/callback.html
@@ -15,12 +15,53 @@
 			<br /><br /><br />
 			<a href="https://api.pinterest.com/oauth/?response_type=code&redirect_uri=https://kaseyllabelle.github.io/IoP/callback.html&client_id=4924393521510627802&scope=read_public&state=pinpuppies">pinterest oauth</a>
 					<br /><br /><br />
+			500px Login:<br/>
+			<br /><br /><br />
+			<a href="https://api.500px.com/api/js-sdk/authorize?sdk_key=04a57d5e6d2c3a8ee908e4c41db09f0f5ec31b26&callback=login500">500px oauth</a>
+			<br /><br /><br />
 
-			<code>
+			<code style="display:none">
 			grant_type:'authorization_code',
 			client_id:'4924393521510627802',
 			client_secret:'953d71f8410650fb398fc0e22eb771318dcf6b0d33a80e3609f8dc73e5665758',
 			code:'b49a7a88d9bd5e8a'
+			</code>
+
+
+			<code style="display:none">
+				<hr/>
+				500px<br/>
+				<br/>
+				##http://500px.github.io/500px-js-sdk/#
+				<br/>
+				https://api.500px.com/api/js-sdk/authorize?sdk_key=04a57d5e6d2c3a8ee908e4c41db09f0f5ec31b26&callback=login500
+				<br/>
+				https://api.500px.com/api/js-sdk/check_authorization?sdk_key=04a57d5e6d2c3a8ee908e4c41db09f0f5ec31b26&callback=check500
+<br/>https://api.500px.com/<br/><br/>
+iframe_element.src = site_url + 'api/js-sdk/check_authorization?sdk_key=' + this.sdk_key + '&callback=' + callback_function_name;
+      container.appendChild(iframe_element);<br/><br/>
+<br/><strike>https://api.500px.com/v1/oauth/request_token</strike>
+<br/>POST oauth/request_token
+				<br/><br/>
+				Consumer Key: c05cwMnCzH6jdwMX9mIPWk69E0jy8Rc153tG5bcB
+Consumer Secret: elWo4F45X8AMV6fyFPoFcm1Ej0ssW0u4zscjPfSd
+JavaScript SDK Key: 04a57d5e6d2c3a8ee908e4c41db09f0f5ec31b26
+				<br/><br/>
+				oauth_timestamp:
+				oauth_nonce:
+				oauth_version:
+					oauth_consumer_key:'c05cwMnCzH6jdwMX9mIPWk69E0jy8Rc153tG5bcB',
+					oauth_signature:'elWo4F45X8AMV6fyFPoFcm1Ej0ssW0u4zscjPfSd',
+					oauth_callback:'https://kaseyllabelle.github.io/IoP/callback.html'
+Additional parameters:
+
+----------<br/><br/>
+https://github.com/500px/api-documentation/blob/master/examples/PHP/PHP.md
+<br/><br/>
+function accessTokenURL()  { return 'https://api.500px.com/v1/oauth/access_token'; }<br/>
+function authenticateURL() { return 'https://api.500px.com/v1/oauth/authorize'; }<br/>
+function authorizeURL()    { return 'https://api.500px.com/v1/oauth/authorize'; }<br/>
+function requestTokenURL() { return 'https://api.500px.com/v1/oauth/request_token'; }<br/>
 			</code>
 	<script
 	  src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -72,6 +113,19 @@
 				$('textarea').val(`grant_type:'authorization_code',client_id:'4924393521510627802',client_secret:'953d71f8410650fb398fc0e22eb771318dcf6b0d33a80e3609f8dc73e5665758',code:'${getURLParameter('code')}'`)
 				$('input[type="submit"]').click();
 				alert('pinterest key is in the console (network tab)')
+			}
+			function login500(e)
+			{
+				//https://github.com/500px/500px-js-sdk/blob/master/500px.js
+				let iframe_element = document.createElement('iframe');
+				iframe_element.src = 'https://api.500px.com/api/js-sdk/check_authorization?sdk_key=04a57d5e6d2c3a8ee908e4c41db09f0f5ec31b26&callback=check500';
+      	$('body').appendChild(iframe_element);
+				console.log('login 500',e);
+			}
+			function check500(e)
+			{
+				//https://api.500px.com/api/js-sdk/check_authorization?sdk_key=04a57d5e6d2c3a8ee908e4c41db09f0f5ec31b26&callback=check500
+				console.log('check500',e);
 			}
 		});
 	</script>
