--- a/callback.html
+++ b/callback.html
@@ -12,12 +12,10 @@
 		<input type="submit" name="">
 	</form>
 			Pinterest Login:<br/>
-			<br /><br /><br />
 			<a href="https://api.pinterest.com/oauth/?response_type=code&redirect_uri=https://kaseyllabelle.github.io/IoP/callback.html&client_id=4924393521510627802&scope=read_public&state=pinpuppies">pinterest oauth</a>
 					<br /><br /><br />
 			500px Login:<br/>
-			<br /><br /><br />
-			<a href="https://api.500px.com/api/js-sdk/authorize?sdk_key=04a57d5e6d2c3a8ee908e4c41db09f0f5ec31b26&callback=login500">500px oauth</a>
+			<button onclick="login500()">Login500</button>
 			<br /><br /><br />
 
 			<code style="display:none">
@@ -116,6 +114,11 @@ function requestTokenURL() { return 'https://api.500px.com/v1/oauth/request_toke
 			}
 			function login500(e)
 			{
+				window.open('https://api.500px.com/api/js-sdk/authorize?sdk_key=04a57d5e6d2c3a8ee908e4c41db09f0f5ec31b26&callback=login500cb',
+                  '500px_js_sdk_login',
+                  'width=1240,height=480,left=100,top=100,menu=no,location=yes,scrollbars=no,status=no,toolbar=no');
+			}
+			function login500cb(e)
 				//https://github.com/500px/500px-js-sdk/blob/master/500px.js
 				let iframe_element = document.createElement('iframe');
 				iframe_element.src = 'https://api.500px.com/api/js-sdk/check_authorization?sdk_key=04a57d5e6d2c3a8ee908e4c41db09f0f5ec31b26&callback=check500';
