--- a/callback.html
+++ b/callback.html
@@ -114,7 +114,7 @@ function requestTokenURL() { return 'https://api.500px.com/v1/oauth/request_toke
 				alert('pinterest key is in the console (network tab)')
 			}
 			//giphy
-			var xhr = $.get("http://api.giphy.com/v1/gifs/search?q=ryan+gosling&api_key=AmvMPkwbW7v9oeXFDjyRXtCWJtNOZ2UL&limit=5");
+			var xhr = $.get("https://api.giphy.com/v1/gifs/search?q=ryan+gosling&api_key=AmvMPkwbW7v9oeXFDjyRXtCWJtNOZ2UL&limit=5");
 			xhr.done(function(data) { console.log("success got data", data); });
 		});
 		function login500(e)
