--- a/callback.html
+++ b/callback.html
@@ -62,7 +62,7 @@ function authenticateURL() { return 'https://api.500px.com/v1/oauth/authorize'; 
 function authorizeURL()    { return 'https://api.500px.com/v1/oauth/authorize'; }<br/>
 function requestTokenURL() { return 'https://api.500px.com/v1/oauth/request_token'; }<br/>
 			</code>
-			<a href="api.tumblr.com/v2/tagged?api_key=NPVdky515PEendzYYA44WarFcZeKhstduONQB979h3q8KMFCKM&tag=pitbull-puppies">tumblr</a>
+			<a href="https://api.tumblr.com/v2/tagged?api_key=NPVdky515PEendzYYA44WarFcZeKhstduONQB979h3q8KMFCKM&tag=pitbull-puppies">tumblr</a>
 	<script
 	  src="https://code.jquery.com/jquery-3.2.1.min.js"
 	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
