--- a/index.html
+++ b/index.html
@@ -14,36 +14,27 @@
 	</form>
 	<div>
 		<p>Show me puppies from:</p>
-		<label for="fivehundredpx">
-			<input type="checkbox" name="fivehundredpx" id="fivehundredpx" title="500px" />
-		    	500px
-		</label><br><br>
-		<label for="giphy">
-			<input type="checkbox" name="giphy" id="giphy" title="giphy" />
-		    	giphy
-		</label><br><br>
-		<label for="imgur">
-			<input type="checkbox" name="imgur" id="imgur" title="imgur" />
-			    imgur
-		</label><br><br>
-		<label for="instagram">
-			<input type="checkbox" name="instagram" id="instagram" title="instagram" />
-		    	instagram
-		</label><br><br>
-		<label for="pinterest">
-			<input type="checkbox" name="pinterest" id="pinterest" title="pinterest" />
-		    	pinterest
-		</label><br><br>
-		<label for="tumblr">
-			<input type="checkbox" name="tumblr" id="tumblr" title="tumblr" />
-		    	tumblr
-		</label><br><br>
-		<label for="youtube">
-			<input type="checkbox" name="youtube" id="youtube" title="youtube" />
-		    	youtube
-		</label>
+		<label for="fivehundredpx">500px</label>
+		<input type="checkbox" name="fivehundredpx" id="fivehundredpx" title="500px" />
+		<br><br>
+		<label for="giphy">giphy</label>
+		<input type="checkbox" name="giphy" id="giphy" title="giphy" />
+		<br><br>
+		<label for="imgur">imgur</label>
+		<input type="checkbox" name="imgur" id="imgur" title="imgur" />
+		<br><br>
+		<label for="instagram">instagram</label>
+		<input type="checkbox" name="instagram" id="instagram" title="instagram" />
+		<br><br>
+		<label for="pinterest">pinterest</label>
+		<input type="checkbox" name="pinterest" id="pinterest" title="pinterest" />
+		<br><br>
+		<label for="tumblr">tumblr</label>
+		<input type="checkbox" name="tumblr" id="tumblr" title="tumblr" />
+		<br><br>
+		<label for="youtube">youtube</label>
+		<input type="checkbox" name="youtube" id="youtube" title="youtube" />
 	</div>
-
 <!--
 
 Form inspired by: https://tympanus.net/Tutorials/NaturalLanguageForm/
@@ -74,19 +65,6 @@ checkboxes
 	youtube
 
 -->
-
-	<!-- 	
-		<div>
-		Sources:
-			<input type="checkbox" name='fivehundredpx'>500px</input><br/>
-			<input type="checkbox" name='giphy'>giphy</input><br/>
-			<input type="checkbox" name='imgur'>imgur</input><br/>
-			<input type="checkbox" name='instagram'>instagram</input><br/>
-			<input type="checkbox" name='pinterest'>pinterest</input><br/>
-			<input type="checkbox" name='tumblr'>tumblr</input><br/>
-			<input type="checkbox" name='youtube'>youtube</input>
-		</div>
-	-->
 	<script
 	  src="https://code.jquery.com/jquery-3.2.1.min.js"
 	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
