--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ checkboxes
 		  });
 		  selectedSources = selectedSources.slice(0, -1);
 		  console.log('selectedSources',selectedSources);
-		  localStorage.setItem('selectedSources',selectedSources)
+		  localStorage.setItem('selectedSources',selectedSources);
 		}
 	</script>
 </body>
