--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	</div>
 <!--
 
-Form inspired by: https://tympanus.net/Tutorials/NaturalLanguageForm/
+Form inspired by: https://tympanus.net/Tutorials/NaturalLanguageForm/ and https://token.ai/find-gift
 More examples: https://www.jroehm.com/2014/01/ui-pattern-natural-language-form/
 
 Show me [adjective input] puppy [type input] from [source input]
