--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ checkboxes
 		    }
 		  });
 		  selectedSources = selectedSources.slice(0, -1);
-		  if(~indexOf('fivehundredpx')){
+		  if(~selectedSources.indexOf('fivehundredpx')){
 		  	selectedSources.replace('fivehundredpx', '');
 		  	selectedSources += 'fivehundredpx';
 		  }
