--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 	<h1>IoP</h1>
 	<p>This app shows users a curated list of puppy images, videos, and gifs from all over the internet because the Internet of Puppies > the Internet of Things.</p>
 	<p>Just type an <a href="https://www.google.com/search?q=adjective" target="_blank">adjective</a> or breed into the input and click "Puppies, please!" for a curated list of your favorite kind of puppies. What more could you want?</p>
-	<form>
-		<input type="text" placeholder="pitbull">
-		<input type="submit" class="button" value="Puppies, please!">
-	</form>
+	<input type="text" placeholder="pitbull">
+	<input type="submit" class="button" value="Puppies, please!">
 	<div>
 		<p>Show me puppies from:</p>
 		<label for="fivehundredpx">500px</label>
@@ -71,10 +69,14 @@ checkboxes
 	  crossorigin="anonymous"></script>
 	<script>
 		$(document).ready(function(){
-		  $('input').click(function(){
+		  $('input[type=checkbox]').click(function(){
 		    formatLocalStorage();
 		  });
-		})
+		  $('input.button').click(function(){
+		  	localStorage.setItem('query',$('input[type=text]').val());
+		  	window.location.href = '/IoP/callback.html';
+		  });
+		});
 
 		function formatLocalStorage()
 		{
