--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@ checkboxes
 
 		  	// remove this before pushing
 			// localStorage.setItem('fivehundredpx_token', 'jdqPAbiJ7hoWo9IAuM0DjNS23P1mt2VOAc3p1x7T');
-			localStorage.setItem('giphy_token', 'AmvMPkwbW7v9oeXFDjyRXtCWJtNOZ2UL');
-			localStorage.setItem('imgur_token', '25106fb1b49ed4ba17901c415d3c2ac8803ec921');
-			localStorage.setItem('query', 'pittie');
+			// localStorage.setItem('giphy_token', 'AmvMPkwbW7v9oeXFDjyRXtCWJtNOZ2UL');
+			// localStorage.setItem('imgur_token', '25106fb1b49ed4ba17901c415d3c2ac8803ec921');
+			// localStorage.setItem('query', 'pittie');
 
 			if(~window.location.href.indexOf('load-puppies')){
 				oAuthMethods.compiledImages = [];
