adding markup to start natural language form

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 	<h1>IoP</h1>
 	<p>This app shows users a curated list of puppy images, videos, and gifs from all over the internet because the Internet of Puppies > the Internet of Things.</p>
 	<p>Just type an <a href="https://www.google.com/search?q=adjective" target="_blank">adjective</a> or breed into the input and click "Puppies, please!" for a curated list of your favorite kind of puppies. What more could you want?</p>
-	<input type="text" placeholder="pitbull">
-	<input type="submit" class="button" value="Puppies, please!">
-	<div>
+<!-- 	<input type="text" placeholder="pitbull">
+	<input type="submit" class="button" value="Puppies, please!"> -->
+<!-- 	<div>
 		<p>Show me puppies from:</p>
 		<label for="fivehundredpx">500px</label>
 		<input type="checkbox" name="fivehundredpx" id="fivehundredpx" title="500px" />
@@ -42,8 +42,53 @@
 		<br><br>
 		<label for="youtube">youtube</label>
 		<input type="checkbox" name="youtube" id="youtube" title="youtube" />
-	</div>
+	</div> -->
+
+	I want to see 
+	<br><br>
+	<input type="text" placeholder="pitbull"> 
+	<br><br>
+	puppy 
+	<br><br>
+	<input type="checkbox" name="gifs" id="gifs" title="gifs" />
+	<label for="images">gifs</label>
+	<br><br>
+	<input type="checkbox" name="images" id="images" title="images" />
+	<label for="images">images</label>
+	<br><br>
+	<input type="checkbox" name="videos" id="videos" title="videos" />
+	<label for="images">videos</label>
+	<br><br>
+	<!-- set up so "and" will render if you select more than one type option -->
+	from 
+	<br><br>
+	<input type="checkbox" name="fivehundredpx" id="fivehundredpx" title="fivehundredpx" />
+	<label for="fivehundredpx">500px</label>
+	<br><br>
+	<input type="checkbox" name="giphy" id="giphy" title="giphy" />
+	<label for="giphy">giphy</label>
+	<br><br>
+	<input type="checkbox" name="imgur" id="imgur" title="imgur" />
+	<label for="imgur">imgur</label>
+	<br><br>
+	<input type="checkbox" name="instagram" id="instagram" title="instagram" />
+	<label for="instagram">instagram</label>
+	<br><br>
+	<input type="checkbox" name="pinterest" id="pinterest" title="pinterest" />
+	<label for="pinterest">pinterest</label>
+	<br><br>
+	<input type="checkbox" name="tumblr" id="tumblr" title="tumblr" />
+	<label for="tumblr">tumblr</label>
+	<br><br>
+	<input type="checkbox" name="youtube" id="youtube" title="youtube" />
+	<label for="youtube">youtube</label>
+	<br><br>
+	<input type="submit" class="button" value="Puppies, please!">
 <!--
+
+
+<input type="checkbox" name="vehicle1" value="Bike"> I have a bike<br>
+
 
 Form inspired by: https://tympanus.net/Tutorials/NaturalLanguageForm/ and https://token.ai/find-gift
 More examples: https://www.jroehm.com/2014/01/ui-pattern-natural-language-form/
