--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 	<br><br>
 	<input type="checkbox" name="videos" id="videos" title="videos" />
 	<label for="images">videos</label>
+	<!-- set up so commas and "and" will render if you select more than one type option -->
 	<br><br>
-	<!-- set up so "and" will render if you select more than one type option -->
 	from 
 	<br><br>
 	<input type="checkbox" name="fivehundredpx" id="fivehundredpx" title="fivehundredpx" />
