--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script src="sites/youtube.js"></script>
 </head>
 <body>
+	<div id="content"></div>
 	<h1>IoP</h1>
 	<p>This app shows users a curated list of puppy images, videos, and gifs from all over the internet because the Internet of Puppies > the Internet of Things.</p>
 	<p>Just type an <a href="https://www.google.com/search?q=adjective" target="_blank">adjective</a> or breed into the input and click "Puppies, please!" for a curated list of your favorite kind of puppies. What more could you want?</p>
