--- a/index.html
+++ b/index.html
@@ -126,3 +126,11 @@ checkboxes
 	<script src="app.js"></script>
 </body>
 </html>
+
+
+<!-- 
+clean up index.html
+do UI stuff
+get pinterest working
+make sure all have limits and loops
+-->
