--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>IoP Index</title>
+	<title>IoP</title>
 	<link rel="stylesheet" href="main.css">
 	<script>
 		var oAuthMethods = {};
 	</script>
+	<script src="masonry.pkgd.js"></script>
+	<script src="https://unpkg.com/infinite-scroll@3/dist/infinite-scroll.pkgd.min.js"></script>
 	<script src="sites/fivehundredpx.js"></script>
 	<script src="sites/giphy.js"></script>
 	<script src="sites/imgur.js"></script>
@@ -85,6 +87,12 @@
 	<label for="youtube">youtube</label>
 	<br><br>
 	<input type="submit" class="button" value="Puppies, please!">
+	<div class="grid">
+	</div>
+<!-- 	<div id="masonry" class="grid results masonry container">
+		https://masonry.desandro.com/
+		https://infinite-scroll.com/
+	</div> -->
 <!--
 
 
@@ -129,8 +137,38 @@ checkboxes
 
 
 <!-- 
+fix facebook account for pinterest
+
 clean up index.html
 do UI stuff
 get pinterest working
-make sure all have limits and loops
+make sure all have limits and loops and error handling
+add a button to render more results
+
+click on result and open in new tab
+
+logo/workmark in left corner, description to the right of it or above filters in nav
+
+left nav/filter?
+text input for breed
+3 selectable icons in bar for img, vid, gif w icon + name
+expandable? section for sources w icon + name
+full width puppies pls button
+
+more results button in results container
+OR infinite scroll?
+
+authentication doesnt work on iphone/github
+
+add functionality to sort by source or type
+
+add flickr? add facebook?
+
+add functionality to share result to
+Facebook
+Instagram
+Pinterest
+Tumblr
+Twitter
 -->
+
